--- a/Abby_RazorPage_Mike/Pages/Categories/Index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Categories/Index.cshtml
@@ -9,7 +9,7 @@
         </div>
         <div class="col-6">
             <a asp-page="create" class="btn btn-primary">
-                Create New Category
+                <i class="fa-solid fa-plus"></i>&nbsp;Create New Category
             </a>
         </div>
     </div>
@@ -25,6 +25,7 @@
                 <th>
                     Display Order
                 </th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -33,6 +34,16 @@
                 <tr>
                     <td width="50%">@obj.Name</td>
                     <td width="30%">@obj.DisplayOrder</td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-page="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="fa-solid fa-pencil"></i>
+                            </a>
+                            <a asp-page="Delete" class="btn btn-danger mx-2">
+                                <i class="fa-solid fa-trash"></i>
+                            </a>
+                        </div>
+                    </td>
                 </tr>
             }
 
