3-12-2 Remove Font Awesome JS from _layout, and put to single Page
To avoid loading this file time and time ?   is this a good approach?

--- a/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Abby_RazorPage_Mike.styles.css" asp-append-version="true" />
-    <script src="https://kit.fontawesome.com/157d7c246f.js" crossorigin="anonymous"></script> <!--This line is for using FA-->
+    <!--  <script src="https://kit.fontawesome.com/157d7c246f.js" crossorigin="anonymous"></script>    -->
 </head>
 <body>
     <header>
