--- a/Abby_RazorPage_Mike/Pages/Categories/Index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Categories/Index.cshtml
@@ -52,3 +52,7 @@
 
 </div>
 
+@section Scripts{
+    <script src="https://kit.fontawesome.com/157d7c246f.js" crossorigin="anonymous"></script> <!--This line is for using FA-->
+}
+
