--- a/Abby_RazorPage_Mike/Pages/Categories/Index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Categories/Index.cshtml
@@ -39,7 +39,7 @@
                             <a asp-page="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                 <i class="fa-solid fa-pencil"></i>
                             </a>
-                            <a asp-page="Delete" class="btn btn-danger mx-2">
+                            <a asp-page="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                 <i class="fa-solid fa-trash"></i>
                             </a>
                         </div>
