--- a/Abby_RazorPage_Mike/Pages/Categories/Index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Categories/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@page
 @model Abby_RazorPage_Mike.Pages.Categories.IndexModel
 
+@if (TempData["success"] != null)
+{
+    <h2>@TempData["success"]</h2>
+}
 
 <div class="container p-3">
     <div class="row pt-4">
