--- a/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+<!--Can use ViewBag in the Razor Content Page,but not in PageModel class-->
+<!--<h1>@ViewBag.Sussess</h1>-->
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Abby_RazorPage_Mike.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <!--  <script src="https://kit.fontawesome.com/157d7c246f.js" crossorigin="anonymous"></script>    -->
 </head>
 <body>
