4-4 Organize Admin and Customer Folder

--- a/Abby_RazorPage_Mike/Pages/Admin/Categories/Delete.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Admin/Categories/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Abby_RazorPage_Mike.Pages.Categories.DeleteModel
+@model Abby_RazorPage_Mike.Pages.Admin.Categories.DeleteModel
 
 
 <form method="post">
