--- a/Abby_RazorPage_Mike/Pages/Admin/Categories/Index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Admin/Categories/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Abby_RazorPage_Mike.Pages.Categories.IndexModel
+@model Abby_RazorPage_Mike.Pages.Admin.Categories.IndexModel
 
 @* loading aowsome font icon is a lit slow,and this approach not work well
     https://stackoverflow.com/questions/35877994/font-awesome-is-loading-very-slow
