4-6-3 homework- Create FoodType + Serverside Validation

--- a/Abby_RazorPage_Mike/Pages/Admin/FoodTypes/Index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Admin/FoodTypes/Index.cshtml
@@ -9,7 +9,7 @@
             <h2 class="text-primary">FoodTypes List</h2>
         </div>
         <div class="col-6">
-            <a asp-page="create" class="btn btn-primary">
+            <a asp-page="/Admin/FoodTypes/Create" class="btn btn-primary">
                 <i class="fa-solid fa-plus"></i>&nbsp;Create New FoodTypes
             </a>
         </div>
