--- a/Abby_RazorPage_Mike/Pages/Admin/MenuItems/Index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Admin/MenuItems/Index.cshtml
@@ -18,53 +18,14 @@
     <table class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-                <th>
-                    Name
-                </th>
-                <th>
-                    Price
-                </th>
-                <th>
-                    FoodType Id
-                </th>
-                <th>
-                    Category Id
-                </th>
-                <th>
-                    Description
-                </th>
-                <th>
-                    Image
-                </th>
-
+                <th>Name</th>
+                <th>Price</th>
+                <th>Category</th>
+                <th>Food Type</th>
                 <th></th>
             </tr>
         </thead>
-        <tbody>
-            @foreach (var obj in Model.MenuItems)
-            {
-                <tr>
-                    <td width="50%">@obj.Name</td>
-                    <td width="50%">@obj.Price</td>
-                    <td width="50%">@obj.FoodTypeId</td>
-                    <td width="50%">@obj.CategoryId</td>
-                    <td width="50%">@obj.Description</td>
-                    <td width="50%">@obj.Image</td>
 
-                    <td>
-                        <div class="w-75 btn-group" role="group">
-                            <a asp-page="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                <i class="fa-solid fa-pencil"></i>
-                            </a>
-                            <a asp-page="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                <i class="fa-solid fa-trash"></i>
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-            }
-
-        </tbody>
     </table>
 
 </div>
