--- a/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+    <script src="https://cdn.tiny.cloud/1/m5m86c0l5n044ixtfrchzht2puwc6jbeig8ewr8k81gw1bqh/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
