6-11. Include DataTable to the project

--- a/Abby_RazorPage_Mike/Pages/Admin/MenuItems/Index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Admin/MenuItems/Index.cshtml
@@ -15,7 +15,7 @@
 
     <br /><br />
 
-    <table class="table table-bordered table-striped" style="width:100%">
+    <table id="DT_load" class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
                 <th>Name</th>
@@ -32,5 +32,6 @@
 
 @section Scripts{
     <script src="https://kit.fontawesome.com/157d7c246f.js" crossorigin="anonymous"></script><!-- This line is for using FA-->
+    <script src="~/js/menuItem.js"></script>
 }
 
