--- a/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Abby_RazorPage_Mike.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <link rel="stylesheet" href="//cdn.datatables.net/1.11.2/css/jquery.dataTables.min.css" />  <!--This is not the best place,not every page use this. also, the css should from local-->
     <!--  <script src="https://kit.fontawesome.com/157d7c246f.js" crossorigin="anonymous"></script>    -->
 </head>
 <body>
@@ -62,6 +63,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.tiny.cloud/1/m5m86c0l5n044ixtfrchzht2puwc6jbeig8ewr8k81gw1bqh/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="//cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>  <!--This is not the best place,not every page use this. also, the css should from local-->
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
