--- a/Abby_RazorPage_Mike/Pages/Admin/MenuItems/Upsert.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Admin/MenuItems/Upsert.cshtml
@@ -52,7 +52,7 @@
             <span asp-validation-for="MenuItem.FoodTypeId" class="text-danger"></span>
         </div>
 
-        <button type="submit" class="btn btn-primary" style="width:150px;">Create</button>
+        <button type="submit" class="btn btn-primary" style="width:150px;">@(Model.MenuItem.Id != 0 ? "Update" : "Create")</button>
         <a asp-page="Index" class="btn btn-secondary" style="width:150px;"> Back to List</a>
     </div>
 </form>
