6-17 Delete MenuItem with Web API and SweetAlert

--- a/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
@@ -64,6 +64,8 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.tiny.cloud/1/m5m86c0l5n044ixtfrchzht2puwc6jbeig8ewr8k81gw1bqh/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="//cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>  <!--This is not the best place,not every page use this. also, the css should from local-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
