--- a/Abby_RazorPage_Mike/Pages/Admin/MenuItems/Upsert.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Admin/MenuItems/Upsert.cshtml
@@ -56,7 +56,19 @@
                 }
             </div>
         </div>
+
+        <!--
         <button type="submit" class="btn btn-primary" style="width:150px;">@(Model.MenuItem.Id != 0 ? "Update" : "Create")</button>
+        -->
+        @if (Model.MenuItem.Id != 0)
+        {
+            <button type="submit" class="btn btn-primary" style="width:150px;">Update</button>
+        }
+        else
+        {
+            <button type="submit" onclick="return ValidateInput()" class="btn btn-primary" style="width:150px;">Create</button>
+        }
+
         <a asp-page="Index" class="btn btn-secondary" style="width:150px;"> Back to List</a>
 
     </div>
@@ -70,6 +82,20 @@
             plugins: 'advlist autolink lists link image charmap print preview hr anchor pagebreak',
             toolbar_mode: 'floating',
         });
+
+        // This Function will use "sweetAlert" library to prompt User
+        function ValidateInput() {
+            if (document.getElementById("uploadBox").value == "") {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Please upload an Image!',
+                });
+                return false;
+            }
+            return true;
+        }
+
     </script>
 
     @{
