7-4-2 Fix ASP-PAGE cannot generate Href issue.

--- a/Abby_RazorPage_Mike/Pages/Customer/Home/Details.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Customer/Home/Details.cshtml
@@ -1,6 +1,9 @@
 ﻿@page
 @model Abby_RazorPage_Mike.Pages.Customer.Home.DetailsModel
+@{
+}
 
+<h1>Details</h1>
 <div class="">
     <form method="post">
         <div class="container backgroundWhite">
