--- a/Abby_RazorPage_Mike/Pages/Customer/Home/Index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Customer/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model Abby_RazorPage_Mike.Pages.Customer.Home.IndexModel
 
 <div class="row container pb-3 backgroundWhite">
@@ -29,6 +30,7 @@
                                 </div>
                                 <div class="col-12 p-1">
                                     <a asp-page="Details" asp-route-id="@menuItem.Id" class="btn btn-dark form-control btn-sm p-2" style="height:40px">View Details</a>
+                                    <!--<a class="btn btn-dark form-control btn-sm p-2" style="height:40px" href="Home/Details?id=@menuItem.Id">View Details</a> -->
                                 </div>
                             </div>
                         </div>
