8-2-1 Embedded _LoginPartial into _layout

--- a/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                                 <a class="dropdown-item" asp-area="" asp-page="/Admin/FoodTypes/Index">Others</a>
                             </div>
                         </li>
+                        <partial name="_LoginPartial" />  <!--Embeded Login, register UI provided by Identity framework-->
                     </ul>
                 </div>
             </div>
