--- a/Abby_RazorPage_Mike/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Abby_RazorPage_Mike/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model RegisterModel
+@using Abby.Utility
 @{
     ViewData["Title"] = "Register";
 }
@@ -44,6 +45,13 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+
+            <div class="form-floating mb-3">
+                <input type="radio" name="rdUserRole" value="@SD.ManagerRole" />@SD.ManagerRole
+                <input type="radio" name="rdUserRole" value="@SD.KitchenRole" />@SD.KitchenRole
+                <input type="radio" name="rdUserRole" value="@SD.FrontDeskRole" />@SD.FrontDeskRole
+            </div>
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
