--- a/Abby_RazorPage_Mike/Pages/Customer/Home/Details.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Customer/Home/Details.cshtml
@@ -11,10 +11,10 @@
                 <div class="card-header">
                     <div class="text-light ml-0 row ">
                         <div class="col-12 col-md-6 pt-2">
-                            <h1 class="text-primary">@Model.MenuItem.Name</h1>
+                            <h1 class="text-primary">@Model.ShoppingCart.MenuItem.Name</h1>
                         </div>
                         <div class="col-12 col-md-6 text-end pt-2">
-                            <h1 class="text-muted"> $@Model.MenuItem.Price</h1>
+                            <h1 class="text-muted"> $@Model.ShoppingCart.MenuItem.Price</h1>
                         </div>
                     </div>
                 </div>
@@ -24,20 +24,20 @@
                             <div class="col-12 col-lg-8">
                                 <div class="row">
                                     <div class="col-12">
-                                        <span class="badge bg-warning p-3 h3">@Model.MenuItem.Category.Name</span>
-                                        <span class="badge bg-dark p-3">@Model.MenuItem.FoodType.Name</span>
+                                        <span class="badge bg-warning p-3 h3">@Model.ShoppingCart.MenuItem.Category.Name</span>
+                                        <span class="badge bg-dark p-3">@Model.ShoppingCart.MenuItem.FoodType.Name</span>
                                         <h3 class="text-success"></h3>
-                                        <p class="text-secondary">@Html.Raw(Model.MenuItem.Description)</p>
+                                        <p class="text-secondary">@Html.Raw(Model.ShoppingCart.MenuItem.Description)</p>
                                         <div class="form-floating my-2">
-                                            <input asp-for="Count" class="form-control" aria-required="true" />
-                                            <label asp-for="Count"></label>
-                                            <span asp-validation-for="Count" class="text-danger"></span>
+                                            <input asp-for="ShoppingCart.Count" class="form-control" aria-required="true" />
+                                            <label asp-for="ShoppingCart.Count"></label>
+                                            <span asp-validation-for="ShoppingCart.Count" class="text-danger"></span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4 p-1 text-center">
-                                <img src="@Model.MenuItem.Image" width="100%" class="rounded" />
+                                <img src="@Model.ShoppingCart.MenuItem.Image" width="100%" class="rounded" />
                             </div>
                         </div>
                     </div>
@@ -45,7 +45,7 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-12 col-md-6 pb-1 ">
-                            <a class="btn btn-success btn-square form-control" style="height:50px;">Back to List</a>
+                            <a asp-page="/Customer/Home/index" class="btn btn-success btn-square form-control" style="height:50px;">Back to List</a>
                         </div>
                         <div class="col-12 col-md-6 ">
                             <button type="submit" class="btn btn-primary btn-square form-control" style="height:50px;">Add to Cart</button>
