9-5 Add to Shopping Cart

--- a/Abby_RazorPage_Mike/Pages/Customer/Home/Details.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Customer/Home/Details.cshtml
@@ -6,6 +6,8 @@
 <h1>Details</h1>
 <div class="">
     <form method="post">
+        <input asp-for="ShoppingCart.MenuItemId" hidden />
+        <input asp-for="ShoppingCart.ApplicationUserId" hidden />
         <div class="container backgroundWhite">
             <div class="card">
                 <div class="card-header">
