9-8-1 Add a Shopping Cart Icon from Font Awesome
Notice, this icon will display on the _layout, so that uncomment the JS line which is for FA icon to display

--- a/Abby_RazorPage_Mike/Pages/Customer/Cart/index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Customer/Cart/index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
-@model Abby_RazorPage_Mike.Pages.Customer.Cart.indexModel
+@model Abby_RazorPage_Mike.Pages.Customer.Cart.IndexModel
 @{
 }
+<h1>Shopping Cart</h1>
