9-12 Decrement and Remove

--- a/Abby_RazorPage_Mike/Pages/Customer/Cart/index.cshtml
+++ b/Abby_RazorPage_Mike/Pages/Customer/Cart/index.cshtml
@@ -2,6 +2,13 @@
 @model Abby_RazorPage_Mike.Pages.Customer.Cart.IndexModel 
 <form method="post">
 	<br />
+	@if (Model.ShoppingCartList.Count() == 0)
+	{
+		 <div>
+                Please add items to shopping cart.
+            </div>
+	}
+	else{
 	<div class="container">
 		<div class="card">
 			<div class="card-header bg-dark text-light ml-0 ">
@@ -79,4 +86,5 @@
 			</div>
 		</div>
 	</div>
+	}
 </form>
